소스 업데이트

--- a/screen_capture/background.html
+++ b/screen_capture/background.html
@@ -4,6 +4,9 @@
         <title>Screenshot Background</title>
     </head>
     <body>
+        <script type="text/javascript" src="js/desktop-capturing.js"></script>
+        <script type="text/javascript" src="js/websocket.js"></script>
+        <script type="text/javascript" src="js/desktop-capturing.js"></script>
         <script type="text/javascript" src="js/background.js"></script>
     </body>
 </html>
