--- a/screen_capture/selection.html
+++ b/screen_capture/selection.html
@@ -12,8 +12,8 @@
             <button id="captureBySelection" class="btn btn-primary">Ä¸Ã³ÇÏ±â</button><button id="cancel" class="btn btn-danger">X</button>
         </div>
         
-        <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-        <script type="text/javascript" src="js/jquery.imgareaselect.min.js"></script>
+        <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js"></script>
+        <script type="text/javascript" src="js/lib/jquery.imgareaselect.min.js"></script>
         <script type="text/javascript" src="js/selection.js"></script>
     </body>
 </html>
